--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,12 @@
 title: 'Quest of Iolo'
-description: 'Ho eyo he hum!'
+description: "Ho eyo he hum! Here the Jesters sing Ho Ho, But why they do, I'll never know."
 url: 'https://iolo.github.io'
 enforce_ssl: 'iolo.lezhin.io'
 baseurl: ''
 image: '/assets/img/iolo50.png'
 timezone: Asia/Seoul
 date_format: "%Y-%m-%d"
+author: 'Dongsu Jang'
 
 repository: iolo/iolo.github.io
 
